[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twins-twilio"
version = "0.1.0"
description = "Twilio SMS digital twin for twins.la"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0,<4.0",
    "requests>=2.31,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "twilio>=9.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["twins_twilio*"]
