[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twins-twilio"
version = "0.2.0"
description = "Twilio SMS digital twin for twins.la"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0,<4.0",
    "requests>=2.31,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "twilio>=9.0",
    "httpx>=0.27",
]
render = [
    "pytest-playwright>=0.5,<1.0",
]

[tool.setuptools.packages.find]
include = ["twins_twilio*"]

[tool.pytest.ini_options]
markers = [
    "render: browser-render-grain tests (requires `pip install -e .[render] && playwright install chromium`); excluded by default — run with `pytest -m render`",
]
addopts = "-m 'not render'"
